# solarcycle-updated

./: .gitignore  PROBLEM_STATEMENT.md  README.md  USAGE_GUIDE.md  data_collection.py  main.py  model_evaluation.py  pyproject.toml  pytorch_models.py
data/: raw_multivariate_data.csv
legacy/: ARCHITECTURE_UPGRADE.md  QUICK_START.md  cycle_based_model.py  data_collection.py  efficient_viz.py  feature_engineering.py  main.py  pytorch_models.py  quick_pytorch_test.py  quick_viz_test.py  run_example.py  tensorflow_style_model.py  train_cycle_model.py  train_paper_model.py  train_tensorflow_style.py  visualization.py  visualize_results.py  wavenet_lstm_model.py
scripts/: backtest.py  forecast_next_cycle.py  hindcast_sc25.py  run_cv.py  train_seq2seq.py
solar/: __init__.py
solar/configs/: ablation_tcn.yaml  base.yaml  seq2seq_precursors.yaml  seq2seq_quantile.yaml  wavenet_lstm_tiny.yaml  wavenet_lstm_v2.yaml  wavenet_lstm_v2_area.yaml  wavenet_lstm_v2_term.yaml
solar/data/: __init__.py  collection.py  loading.py  monthly.py
solar/eval/: __init__.py  conformal.py  loco.py  metrics.py
solar/models/: __init__.py  baselines.py  heads.py  nbeatsx.py  precursor_ensemble.py  tcn_only.py  wavenet_attn_seq2seq.py  wavenet_lstm_direct.py
solar/trainers/: __init__.py  mixins.py  seq2seq_trainer.py
solar/utils/: __init__.py  config.py  normalization.py  peak_metrics.py  plotting.py  precursors.py  rolling_cv.py  splits.py
tests/: test_causality.py  test_data_integrity.py  test_device_compatibility.py
