[project]
name = "solarcycle-updated"
version = "0.1.0"
description = "Multivariate Sunspot Prediction using PyTorch and Advanced ML Methods"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "requests>=2.31.0",
    "statsmodels>=0.14.0",
    "xgboost>=2.0.0",
    "tqdm>=4.65.0",
    "plotly>=5.15.0",
    "beautifulsoup4>=4.12.0",
]
