[project]
name = "solarcycle-updated"
version = "0.1.0"
description = "Multivariate Sunspot Prediction using PyTorch and Advanced ML Methods"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0.3",
    "pydantic>=2.12.3",
]

[project.optional-dependencies]
# Extra packages used only by the superseded scripts under legacy/.
legacy = [
    "statsmodels>=0.14.0",
    "plotly>=5.15.0",
]
